# term-rustdoc

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  outline-design.txt
src/: lib.rs  type_name.rs  util.rs
src/decl/: fn_.rs  mod.rs  struct_.rs
src/tree/: display.rs  id.rs  mod.rs  stats.rs  tag.rs  textline.rs
src/tree/id/: impls.rs
src/tree/impls/: debug.rs  mod.rs  show.rs
src/tree/nodes/: enums.rs  impls.rs  imports.rs  item_inner.rs  macros.rs  mod.rs  structs.rs  traits.rs  type_alias.rs  unions.rs
src/tree/stats/: impls.rs  mod.rs
src/tree/textline/: fold.rs
src/type_name/: funcion.rs  generic.rs  mod.rs  short_or_long.rs
src/type_name/render/: mod.rs
src/type_name/style/: function.rs  generics.rs  mod.rs  path.rs  type_.rs  utils.rs
src/type_name/style/decl/: function.rs  mod.rs  struct_.rs
tests/: compile_doc.rs
tests/integration/: Cargo.toml  build.rs
tests/integration/src/: lib.rs
tests/parse-json-docs/: .main.rs.pending-snap  fn_item_decl.rs  generate_doc_json.rs  main.rs  parse.rs  syntect_set.rs
tests/parse-json-docs/snapshots/: parse_json_docs__DModule.snap  parse_json_docs__fn_item_decl__DeclarationLines-fn-items.snap  parse_json_docs__fn_item_decl__DeclarationLines-methods.snap  parse_json_docs__fn_item_decl__DeclarationLines-structs.snap  parse_json_docs__local_items.snap  parse_json_docs__parse__DModule.snap  parse_json_docs__parse__empty-tree-with-same-depth.snap  parse_json_docs__parse__flatten-tree.snap  parse_json_docs__parse__item-tree.snap  parse_json_docs__parse__show-id.snap  parse_json_docs__parse__show-prettier.snap  parse_json_docs__syntect_set__syntax_set.snap
