[package]
name = "term-rustdoc"
version = "0.1.0"
edition = "2021"

[dependencies]
rustdoc-types = "0.24"
rustdoc-json = "0.8"
public-api = "0.33"
redb = "1.5"

serde = "1"
serde_json = "1"

xz2 = "0.1"
bytesize = "1"

termtree = "0.4"
compact_str = "0.7"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }

color-eyre = "0.6"
rustc-hash = "1"
regex = "1"

tracing = "0.1"
tracing-subscriber = "0.3"

constcat = "0.4"

[dev-dependencies]
insta = "1"

[workspace]
members = ["./tests/integration/"]
