[package]
name = "term-rustdoc"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "term-rustdoc"
path = "src/bin/main.rs"

[dependencies]
rustdoc-types = "0.24"
rustdoc-json = "0.8"
public-api = "0.33"
redb = "1.5"

serde = "1"
serde_json = "1"

xz2 = "0.1"
bytesize = "1"

termtree = "0.4"
compact_str = "0.7"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }

color-eyre = "0.6"
rustc-hash = "1"
regex = "1"

tracing = "0.1"
tracing-subscriber = "0.3"

constcat = "0.4"

ratatui = "0.26.0"
crossterm = "0.27"
textwrap = "0.16"
syntect = "5.1"
pulldown-cmark = "0.10"
unicode-width = "0.1"
itertools = "0.12"
smallvec = "1.13"
icu_segmenter = "1"

home = "0.5"
dirs = "5"
walkdir = "2"
semver = "1"
nucleo = "0.3"

[dev-dependencies]
insta = "1"
similar-asserts = "1.5"

# quicker diffing in tests of insta/similar-asserts
[profile.dev.package.similar]
opt-level = 3

[workspace]
members = ["./tests/integration/"]
