[package]
name = "term-rustdoc"
version = "0.2.0"
edition = "2021"
autobins = false
exclude = ["**/snapshots/", "tests/", "outline-design.txt", "cliff.toml", "CHANGELOG.md", ".github"]
repository = "https://github.com/zjp-CN/term-rustdoc"
description = "A TUI for Rust docs."
license = "MIT"

[[bin]]
name = "term-rustdoc"
path = "src/bin/main.rs"

[dependencies]
rustdoc-types = "0.40"
rustdoc-json = "0.9"
public-api = "0.47"
redb = "1.5"

serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

xz2 = "0.1"
bytesize = "1"

termtree = "0.4"
compact_str = { version = "0.7", features = ["serde"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }

color-eyre = "0.6"
rustc-hash = "1"
regex = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

constcat = "0.5"

ratatui = "0.26.0"
crossterm = "0.27"
textwrap = "0.16"
syntect = "5.1"
pulldown-cmark = "0.10"
unicode-width = "0.1"
itertools = "0.12"
smallvec = "1.13"
icu_segmenter = "1"

home = "0.5"
dirs = "5"
walkdir = "2"
semver = "1"
nucleo-matcher = "0.3"
rayon = "1"
tempfile = "3"
cargo_toml = { version = "0.19", features = ["features"] }
self_cell = "1"

[dev-dependencies]
insta = "1"
similar-asserts = "1.5"

# quicker diffing in tests of insta/similar-asserts
[profile.dev.package.similar]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
members = ["./tests/integration/"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
windows-archive = ".tar.gz"
